--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,29 @@
+
+hr {
+margin-top: 100px;
+margin-bottom: 20px;
+border: 0;
+border-top: 2px solid #eee;
+}
+
+.letras{
+ padding-right: 15px;
+}
+
+
+
+
+.navbar-nav>li {
+	float: left;
+	left: 0;
+	margin-left: 30px;
+}
+
+.navbar-nav.navbar-right:last-child{
+
+	margin-left: 30px;
+}
+
 .navbar-fixed-top{
 	top: 50px ;
 }
@@ -16,12 +42,44 @@
 }
 
 .container {
-padding-right: 210px;
-padding-left: 15px;
-margin-right: auto;
-margin-left: auto;
+	padding-right: 210px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+}
+.col-lg-6 {
+	width: 20%;
+	margin: 10px;
 }
 
-.letras{
-   top: 50px ;
+header.carousel {
+	height: 50%;
+	margin: 200px;
+	top: 51px;
 }
+
+.col-lg-12{
+	width: 100%;
+	top: 200px;
+}
+
+header.carousel .fill{
+	width: 100%;
+ 	height: 100%;
+	background-position: center;
+	background-size: cover;
+}
+
+header.carousel .item, header.carousel .item.active, header.carousel .carousel-inner{
+	height: 100%;
+}
+
+.carousel{
+	position: relative;
+}
+
+.slide{
+	
+}
+
+
