cambios de inserta usuarios, la fuentes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,10 @@ body {
 p.registro {
 	margin: 0 0 25px;
 }
+h1, .h1{
+font-family: 'Great Vibes', cursive;
+font-size: 70px;
+}
 
 /*
 
@@ -98,6 +102,16 @@ padding: 13px;
 */
 
 
+.fondo{
+	background: url(imagen/fondohome.png);
+}
+
+.navbar-brand{
+	font-family: 'Great Vibes', cursive;
+    font-size: 40px;
+
+}
+
 .comentario{
 width: 12.666667%;
 float: left;
@@ -107,6 +121,7 @@ float: left;
 	float: left;
 	width: 570px;
 	margin-top: 50px;
+
 }
 
 .preparacion{
@@ -137,7 +152,7 @@ margin-right: 574px;
 .wrapper2-home  .panel2-home {
 background-color: #fff;
 border: 0px solid transparent;
-border-radius: 110px;
+border-radius: 60px;
 -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
 box-shadow: 0 1px 1px rgba(0,0,0,.05);
 position: absolute;
@@ -157,7 +172,7 @@ width: 245px;
 .wrapper-home  .panel-home {
 background-color: #fff;
 border: 0px solid transparent;
-border-radius: 110px;
+border-radius: 60px;
 -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
 box-shadow: 0 1px 1px rgba(0,0,0,.05);
 position: absolute;
@@ -179,7 +194,7 @@ width: 245px;
 	vertical-align: top;
 	width: 565px;
 	margin-left: 0px;
-	margin-top: 435px;
+	margin-top: 410px;
 	color: #FFFFFF;
 }
 
@@ -189,13 +204,13 @@ width: 245px;
 	width: 440px;
 	margin-left: 20px;
 	margin-top: 60px;
-	color: #124559;
+	color: #fff;
 }
 
 .wrapper-texto .mac-imagen {
 	position: absolute;
-	top: 300px;
-	left: 575px;
+	top: 150px;
+    right: 0px;
 }
 
 .receta .detalle{
@@ -213,7 +228,7 @@ width: 245px;
 .row{
 	margin-right: 0px;
 	margin-left: 0px;
-	background: url(imagen/fondohome.png);
+	/*background: url(imagen/fondohome.png);*/
 
 }
 
@@ -225,7 +240,7 @@ width: 245px;
 	margin-bottom: 40px;
 	background-color: #fff;
 	border: 19px solid transparent;
-	border-radius: 110px;
+	border-radius: 28px;
 	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
 	box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
@@ -242,7 +257,7 @@ width: 245px;
 .btn-login{
 	color: #333;
 	background-color: #FDFDFD;
-	border-radius: 15px;
+	border-radius: 8px;
 	padding: 5px 90px;
 }
 
@@ -265,12 +280,13 @@ width: 245px;
 .btn-registro{
 	color: #333;
 	background-color: #FDFDFD;
-	border-radius: 15px;
+	border-radius: 8px;
 	padding: 5px 150px;
 }
 .panel-registro {
 	text-align: left;
 	float: left;
+	color: aliceblue;
 	max-width: 750px;
 	max-height: 815px;
 	margin: 0 auto 20px;
@@ -310,7 +326,7 @@ width: 245px;
 	position: relative;
 	height: 100%;
 	text-align: center;
-	color: #fff;
+	color: #000;
 	background: url(imagen/pescado.png);
 	background-position: center top;
 	padding-top: 100px;
@@ -330,7 +346,7 @@ width: 245px;
 	max-width: 500px;
 	max-height: 470px;
 	margin: 0 auto 20px;
-	border-radius: 95px;
+	border-radius: 75px;
 	border: 40px solid transparent;
 	background-color: rgba(0, 0, 0, 0.52);
 }
@@ -354,6 +370,7 @@ width: 245px;
 	float: left;
 	width: 200px;
 	margin-top: 8px;
+	margin-left: 30px;
 }
 
 .navbar-inverse {
