--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,12 +10,46 @@ p.registro {
 	margin: 0 0 25px;
 }
 h1, .h1{
-font-family: 'Great Vibes', cursive;
-font-size: 70px;
-margin-top: -30px;
+	font-family: 'Great Vibes', cursive;
+	font-size: 70px;
+	margin-top: -30px;
+	color:  black;
+	text-shadow: -11px 7px 10px;
+}
+.portada{
+	background: url(imagen/fondo-login.png);
+	height: 335px;
+
+}
+.titulo{
+	font-family: 'Great Vibes', cursive;
+	font-size: 70px;
+	margin-top: 80px;
+	text-shadow: -7px 7px 12px;
 }
 
+.perfil {
+	position: absolute;
+	top: 35px;
+	left: 20px;
+	border-radius: 15px;
+}
+.centrar{
+	margin-left: 15%;
+}
 
+.info-menu{
+	position: absolute;
+	top: 190px;
+	left: 0px;
+	text-align: left;
+	font-size: 25px;
+	font-family: 'Great Vibes', cursive;
+}
+
+.menu-perfil img{
+	width: 20px
+}
 /*
 
 .contenido_interiores {
@@ -103,11 +137,21 @@ padding: 13px;
 
 */
 
-.wrapper2-home .tomate{
+.letra{
+	width: 0px;
+	height: 0px;
+	margin-top: 0px;
+	margin-left: -16px;
+	font-family: 'Great Vibes', cursive;
+	text-shadow: 0px 0px 5px;
+}
+
+.wrapper2-home .tomate {
 	position: absolute;
 	top: 515px;
 	left: 82%;
 }
+
 .wrapper-home .rama{
 	position: absolute;
 	top: 45px;
@@ -155,38 +199,38 @@ padding: 13px;
 .preparacion{
 	float: left;
 	position: relative;
-padding-right: 570px;
+	padding-right: 570px;
 }
 
 
 
 .receta-calificacion {
-height: 40px;
-width: 47%;
-background-color: #F2F2F2;
-border-top: dashed 1px #CCC;
-border-bottom: dashed 1px #CCC;
-margin-bottom: 15px;
-font-size: 14px;
-font-style: italic;
-color: #000;
-font-family: Georgia, "Times New Roman", Times, serif;
-display: inline-block;
-text-align: left;
-margin-right: 574px;
+	height: 40px;
+	width: 47%;
+	background-color: #F2F2F2;
+	border-top: dashed 1px #CCC;
+	border-bottom: dashed 1px #CCC;
+	margin-bottom: 15px;
+	font-size: 14px;
+	font-style: italic;
+	color: #000;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	display: inline-block;
+	text-align: left;
+	margin-right: 574px;
 }
 
 
 .wrapper2-home  .panel2-home {
-background-color: rgba(255, 255, 255, 0);
-border: 0px solid transparent;
-border-radius: 60px;
--webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-position: absolute;
-top: 698px;
-left: 910px;
-width: 245px;
+	background-color: rgba(255, 255, 255, 0);
+	border: 0px solid transparent;
+	border-radius: 60px;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	position: absolute;
+	top: 698px;
+	left: 910px;
+	width: 245px;
 }
 
 
@@ -199,15 +243,15 @@ width: 245px;
 
 
 .wrapper-home  .panel-home {
-background-color: #rgba(255, 255, 255, 0);
-border: 0px solid transparent;
-border-radius: 60px;
--webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-position: absolute;
-top: 260px;
-left: 910px;
-width: 245px;
+	background-color: #rgba(255, 255, 255, 0);
+	border: 0px solid transparent;
+	border-radius: 60px;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	position: absolute;
+	top: 260px;
+	left: 910px;
+	width: 245px;
 }
 
 
@@ -228,6 +272,7 @@ width: 245px;
 	margin-top: 70px;
 	color: #000;
 	font-family: 'Great Vibes', cursive;
+	text-shadow: -6px 6px 10px;
 }
 
 .wrapper-imagen {
@@ -262,8 +307,11 @@ width: 245px;
 .receta .detalle{
  	position: absolute;
 	top: 35px;
-	left: 250px;
-	font-size: 30px;
+	left: 55px;
+	font-size: 43px;
+	font-family: 'Great Vibes', cursive;
+	text-shadow: 0px 0px 10px;
+
 }
 .receta {
 	height: 95px;
@@ -290,7 +338,7 @@ width: 245px;
 }
 
 .img-circle {
-   border-radius: 12%;
+   	border-radius: 12%;
 	max-height: 100px;
 	max-width: 130px;
 }
@@ -345,18 +393,36 @@ width: 245px;
 	padding: 5px 150px;
 }
 
+
+
+
 .panel-receta {
-text-align: left;
-float: left;
-color: white;
-width: 690px;
-max-height: 900px;
-margin: 0 auto 26px;
-border-radius: 50px;
-border: 40px solid transparent;
-background-color: rgba(18, 69, 89, 1);
+	text-align: left;
+	float: left;
+	color: white;
+	width: 690px;
+	max-height: 900px;
+	margin: 0 auto 26px;
+	border-radius: 50px;
+	border: 40px solid transparent;
+	background-color: rgba(18, 69, 89, 1);
+
+}
+.datos{
+	float: left;
+	padding: 40px;
 }
 
+.panel-perfil {
+	text-align: left;
+	float: center;
+	color: white;
+	width: 55%;
+	margin: 120px auto 26px;
+	border-radius: 25px;
+	border: 40px solid transparent;
+	background-color: rgba(18, 69, 89, 1);
+}
 
 .panel-registro {
 	text-align: left;
@@ -456,13 +522,14 @@ background-color: rgba(18, 69, 89, 1);
 }
 .navbar-inverse .navbar-brand {
 	color: #FEF4FF;
+	text-shadow: 0px 0px 12px;
 }
 
 .navbar-inverse .navbar-nav>li>a {
-color: #FEF4FF;
+	color: #FEF4FF;
 }
 
 .col-md-4 {
-width: 25.333333%;
-margin-right: 10px;
+	width: 25.333333%;
+	margin-right: 10px;
 }
